tests/cases/compiler-development/artifact/errors/diagnostic-parser-expected.diagnostic
diagnostic error code=P0001 family=parser source="tests/cases/compiler-development/artifact/errors/diagnostic-parser-expected.ari" line=3 column=1 message="unterminated function body"
